# gettext_mcp

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  SECURITY.md
.github/: CODE_OF_CONDUCT.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: MCP_implementation.md  MCP_spec.md
examples/: sample_en.pot  sample_fr.po  sample_plurals.po
skills/gettext-mcp/: SKILL.md
src/: error.rs  lib.rs  main.rs  mcp_server.rs  prompts.rs  server.rs  store.rs
src/cli/: add_context.rs  common.rs  completions.rs  coverage.rs  header.rs  info.rs  mod.rs  search.rs  set_fuzzy.rs  stale.rs  validate.rs
src/io/: fs.rs  mod.rs
src/model/: entry.rs  file.rs  mod.rs
src/service/: glossary.rs  manager.rs  merger.rs  mo_writer.rs  mod.rs  parser.rs  serializer.rs  store.rs  xliff.rs
src/tools/: coverage.rs  crud.rs  discover.rs  discover_files.rs  extract.rs  glossary.rs  header.rs  metadata.rs  mo.rs  mod.rs  search.rs  sync.rs  validate.rs  xliff.rs
src/web/: mod.rs
tests/: web_integration.rs
