[package]
name = "gettext-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP (Model Context Protocol) server for GNU gettext .po/.pot files"
repository = "https://github.com/example/gettext-mcp"
authors = ["Your Name <your.email@example.com>"]

[[bin]]
name = "gettext-mcp"
path = "src/main.rs"

[lib]
name = "gettext_mcp"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
indexmap = { version = "2.0", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
rmcp = { version = "0.5", features = ["server", "transport-io"] }
schemars = "1.0"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
