[package]
name = "gettext-mcp"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Anatolii Kovalchuk <me@kr00lix.com>"]
description = "Model Context Protocol (MCP) server for managing GNU gettext .po/.pot translation files, with CRUD tools and an optional web UI."
readme = "README.md"
repository = "https://github.com/Kr00lIX/gettext_mcp"
homepage = "https://github.com/Kr00lIX/gettext_mcp"
documentation = "https://docs.rs/gettext-mcp"
license = "MIT OR Apache-2.0"
keywords = ["mcp", "gettext", "i18n", "l10n", "translation"]
categories = ["command-line-utilities", "internationalization", "development-tools", "parser-implementations"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[[bin]]
name = "gettext-mcp"
path = "src/main.rs"

[lib]
name = "gettext_mcp"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
indexmap = { version = "2.0", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
rmcp = { version = "1.7", features = ["server", "transport-io", "macros"] }
schemars = { version = "1.0", features = ["indexmap2"] }
libc = "0.2"
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4"
quick-xml = { version = "0.40", features = ["serialize"] }

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
